# pylox

./: README.md  flake.nix  mlir.nix  pyproject.toml
examples/: class.lox  fib.lox
pylox/: errors.py  main.py
pylox/analysis/: __init__.py  variable_resolver.py
pylox/interpreter/: __init__.py  callable.py  environment.py  lox_class.py  visitor.py
pylox/parser/: __init__.py  ast.py  ast_printer.py  ast_printer_test.py  grammar.py  parser.py  scanner.py  scanner_test.py
